[tool.poetry]
name = "mas"
version = "0.1.0"
description = "MAS using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.55.2,<1.0.0" }


[tool.poetry.scripts]
mas = "mas.main:run"
run_crew = "mas.main:run"
train = "mas.main:train"
replay = "mas.main:replay"
test = "mas.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
